time gate fixes

--- a/services/backend/db/sqlc.yaml
+++ b/services/backend/db/sqlc.yaml
@@ -12,3 +12,6 @@ sql:
         emit_prepared_queries: false
         emit_interface: true
         emit_exact_table_names: false
+        overrides:
+          - column: "scenes.pass_states"
+            go_type: "encoding/json.RawMessage"
